2003-04-10  Michael Yount <csf@moscow.com>

        * lib/Mj/Resend.pm:  (do_digests)  Prevent "To" and "From"
        headers from being duplicated by the message_headers setting.

2003-04-08  Michael Yount <csf@moscow.com>

	* lib/Mj/List.pm:  (_make_aux)  Bugfix: Return undef if
	the sublist was not initialized.  Thanks to Mathieu Arnold.

	* setup/query_util.pl:  (prompt)  Allow answers to be read
	from a response file.  Implemented by Rudolph Maceyko.

2003-03-25  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/BounceParser.pm (parse): Accept owner-list as well as
	list-owner in To: lines when extracting special envelope info.
	(parse_dsn): Be more tolerant of weird Action: entries.
	(parse_dsn): Parse Postfix-format continued per-user entries
	properly.

2003-03-11  Michael Yount <csf@moscow.com>

	* lib/Mj/Archive.pm:  (_sync_msgs)  Declare undeclared variables.

	* lib/Mj/Resend.pm:  (_check_mime)  Change calling conventions
	to support format files.

2003-03-09  Jason Tibbitts <tibbs@math.uh.edu>

	* lib/Mj/Deliver/Dest.pm (make_bsmtpenvelope): 
	* lib/Mj/Deliver/Dest.pm (make_envelope): 
	Pass the substitution string down to the envelope.
	
	* lib/Mj/Deliver/Envelope.pm (send): 
	* lib/Mj/Deliver/BSMTPEnvelope.pm (send):
	Substitute the contents of $self->{personal} instead of hardcoding
	$MSGRCPT.

2003-03-09  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (lock)  Bugfix:  Load the configuration
	file immediately if it has not already been loaded.
	Thanks to Robert.

2003-03-06  Michael Yount <csf@moscow.com>

	* bin/mj_confirm, mj_wwwadm, mj_wwwusr:  Accommodate IPv6
	addresses.  Thanks to Michael Richardson.

2003-03-04  Michael Yount <csf@moscow.com>

	* lib/Mj/Archive.pm:  (_sync_msgs)  Bugfix:  Collect stats
	about the final message instead of the original message.
	Thanks to Robert.

2003-03-03  Michael Yount <csf@moscow.com>

	* bin/mj_confirm, mj_wwwadm, mj_wwwusr:  Include the character